@@ -1,3 +1,10 @@
+2011-07-31  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/49925
+	* include/bits/shared_ptr.h (make_shared): Qualify allocate_shared
+	with std::.
+	* include/bits/shared_ptr_base.h (__make_shared): Likewise.
+
 2011-07-29  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* doc/xml/manual/build_hacking.xml: Markup imagedata changes.
